<resources>
    <string name="app_name">MVPyu</string>
    <string name="title_activity_main2">Leanback Main2Activity Title</string>
    <string name="error_width">宽度不允许超过</string>
    <string name="key_size">按键个数(1-20)</string>
    <string name="sure">确定</string>
    <string name="play_state">切换到播放状态</string>
    <string name="set_state">切换到设置状态</string>
    <string name="key_size_tips">按钮个数在1-20之间</string>
    <string name="play_interval">随机播放时间间隔区间（1-3秒内）</string>
    <string name="play_time">大约播放时长（秒）</string>
    <string name="start_play">开始随机播放</string>
    <string name="stop_play">停止播放</string>
    <string name="date_reset">数据重置</string>
</resources>
