<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_size"
                android:textSize="20sp"></TextView>
            <EditText
                android:id="@+id/key_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/key_size_tips"
                ></EditText>

            <Button
                android:id="@+id/btn_sure"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sure"></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_interval"
                android:textSize="20sp"></TextView>

            <EditText
                android:id="@+id/play_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"></EditText>
            <TextView
                android:id="@+id/text_tp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_reset">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_time"
                android:textSize="20sp"></TextView>
            <EditText
                android:id="@+id/play_time"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="number"></EditText>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_start_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_play"
                    android:layout_marginRight="10dp"></Button>
                <Button
                    android:id="@+id/btn_stop_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_play">
                </Button>
                <Button
                    android:id="@+id/btn_key_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_state">
                </Button>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="120dp"-->
<!--        android:src="@drawable/app_icon_your_company"-->
<!--        />-->
    <LinearLayout
        android:id="@+id/lin_keyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
    </LinearLayout>
</LinearLayout>